--- a/app/src/main/res/layout/content_category.xml
+++ b/app/src/main/res/layout/content_category.xml
@@ -21,7 +21,7 @@
             android:layout_marginStart="5dp"
             android:layout_toStartOf="@+id/view_all_recent"
             android:fontFamily="@font/poppins_semibold"
-            android:text="Latest News"
+            android:text="最新ニュース"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
 
