--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -7,14 +7,6 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <ImageView
-        android:id="@+id/user_image"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/avatar"
-        android:adjustViewBounds="true" />
     <EditText
         android:id="@+id/user_name"
         android:hint="ユーザー名"
@@ -37,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -59,5 +51,5 @@
             android:layout_weight="1"
             android:textSize="20dp"
             android:text="キャンセル" />
-    </LinearLayout>
+    </LinearLayout>-->
 </LinearLayout>
