--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -7,25 +7,49 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="30dp"
+        android:layout_width="80dp"
+        android:layout_gravity="center"
+        app:cardCornerRadius="60dp"
+        android:layout_height="80dp">
+        <ImageView
+            android:id="@+id/user_image_add"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/whitle"
+            android:contentDescription="@string/app_name"
+            android:scaleType="centerCrop"
+            android:src="@drawable/avatar">
+        </ImageView>
+    </android.support.v7.widget.CardView>
+
     <EditText
         android:id="@+id/user_name"
         android:hint="ユーザー名"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:layout_margin="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/user_mail"
         android:hint="E-メール"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:layout_margin="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <EditText
         android:id="@+id/user_comment"
         android:hint="コメント"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:layout_margin="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
