--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -13,28 +13,6 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            app:navigationIcon="@drawable/ic_arrow_back"
-            app:title="@string/app_name"
-            app:titleTextColor="@android:color/white">
-
-            <ImageView
-                android:layout_gravity="right"
-                android:id="@+id/fav_btn"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="13dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_favorite_border" />
-
-        </android.support.v7.widget.Toolbar>
-
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -138,7 +116,8 @@
                 android:text="コメント一覧："
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp">
 
             </TextView>
 
@@ -205,8 +184,36 @@
 
             </LinearLayout>
 
-        </RelativeLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                app:navigationIcon="@drawable/ic_arrow_back"
+                app:title="@string/app_name"
+                app:titleTextColor="@android:color/white">
 
+                <ImageButton
+                    android:id="@+id/fav_btn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="right"
+                    android:layout_marginStart="13dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:src="@drawable/ic_favorite_border" />
+
+            </android.support.v7.widget.Toolbar>
+
+        </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
