--- a/app/src/main/res/layout/content_category.xml
+++ b/app/src/main/res/layout/content_category.xml
@@ -39,7 +39,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_below="@+id/latest_layout"
-        android:id="@+id/recycler_view"
+        android:id="@+id/recycler_view1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
