--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -20,22 +20,19 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:elevation="0dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="0dp">
-
+            android:layout_width="60dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="60dp"
+            android:layout_height="60dp">
             <ImageView
                 android:id="@+id/user_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@color/backcolor"
-                android:contentDescription="@string/app_name"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/avatar"/>
-
+                android:src="@drawable/avatar"
+                >
+            </ImageView>
         </android.support.v7.widget.CardView>
 
         <LinearLayout
@@ -81,7 +78,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/backcolor"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="10dp"
                 android:paddingBottom="9dp"
                 android:maxLines="2"
                 android:textColor="@android:color/black"
